# ngf

./: 1.ipynb  correlations_by_jobgroup_with_tasks.xlsx  data.xlsx  dataset_generation.py  engifi1.ipynb  fin_correlations_jobgroup_with_tasks_notebook.ipynb  final_new_approach.py  final_new_approach_v2.py  new.py
ENGIFI/: eda_results.xlsx  multioutput_classification_results.xlsx
ENGIFI/cluster_results/: cluster_profiles.xlsx
ENGIFI/eda_results/: eda_results.xlsx
ENGIFI/svm_results/: svm_classification_report.xlsx
ML_on_Survey/: Pollfish_Survey_Work_behaviours_survey_393485244_2.xlsx  engifi1.ipynb
ML_on_Survey/svm_results/: svm_performance_metrics.xlsx
MLonSurveyData/: final_task.ipynb  top_cross_correlations.xlsx
Misc/: 1.ipynb  chatgpt.py  claude.py  members.csv  new.py  software_developers_onet_coefficients.csv  software_developers_onet_experience.csv  v1.py  v2.py  v3.py  v3_17_32.txt  v3_18_30.txt  v3_19_30.txt
Misc/engifi-onet-role-mapper/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
Misc/engifi-onet-role-mapper/src/engifi_onet/: __init__.py  cli.py  config.py  http.py  onet_api.py
Misc/engifi-onet-role-mapper/tests/: test_smoke.py
Synthetic dataset/: ONET Mapping Documentation.docx  ONET_role_to_engifi_means_prior.csv  Pseudocode
