[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engifi-onet-role-mapper"
version = "0.1.0"
description = "Engifi O*NET role mapping utilities (title/description -> O*NET-SOC)."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "rich>=13.7"
]

[project.scripts]
engifi-onet = "engifi_onet.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]